parser/Pargrammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.18.10 from Pargrammar.y
-----------------------------------------------------------------------------

state 43 contains 1 shift/reduce conflicts.
state 46 contains 1 shift/reduce conflicts.
state 53 contains 1 shift/reduce conflicts.
state 56 contains 1 shift/reduce conflicts and 1 reduce/reduce conflicts.
state 65 contains 1 shift/reduce conflicts.
state 85 contains 30 reduce/reduce conflicts.
state 114 contains 1 shift/reduce conflicts.
state 124 contains 1 shift/reduce conflicts.
state 129 contains 1 shift/reduce conflicts.
state 140 contains 1 shift/reduce conflicts.
state 189 contains 31 reduce/reduce conflicts.
state 192 contains 1 shift/reduce conflicts.
state 248 contains 1 shift/reduce conflicts.

rule 70 is unused
rule 128 is unused

terminal L_err is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pListDef -> ListDef                         (1)
	%start_pDef -> Def                                 (2)
	%start_pListArg -> ListArg                         (3)
	%start_pListStm -> ListStm                         (4)
	%start_pArg -> Arg                                 (5)
	%start_pStm -> Stm                                 (6)
	%start_pExp16 -> Exp16                             (7)
	%start_pExp15 -> Exp15                             (8)
	%start_pExp14 -> Exp14                             (9)
	%start_pExp13 -> Exp13                             (10)
	%start_pExp12 -> Exp12                             (11)
	%start_pExp11 -> Exp11                             (12)
	%start_pExp10 -> Exp10                             (13)
	%start_pExp9 -> Exp9                               (14)
	%start_pExp8 -> Exp8                               (15)
	%start_pExp4 -> Exp4                               (16)
	%start_pExp3 -> Exp3                               (17)
	%start_pExp2 -> Exp2                               (18)
	%start_pExp1 -> Exp1                               (19)
	%start_pExp -> Exp                                 (20)
	%start_pExp5 -> Exp5                               (21)
	%start_pExp6 -> Exp6                               (22)
	%start_pExp7 -> Exp7                               (23)
	%start_pListExp -> ListExp                         (24)
	%start_pListString -> ListString                   (25)
	%start_pType -> Type                               (26)
	%start_pListType -> ListType                       (27)
	%start_pQCList -> QCList                           (28)
	%start_pQcons -> Qcons                             (29)
	%start_pListQcons -> ListQcons                     (30)
	%start_pCid -> Cid                                 (31)
	%start_pListCid -> ListCid                         (32)
	%start_pListId -> ListId                           (33)
	Integer -> L_integ                                 (34)
	Double -> L_doubl                                  (35)
	Char -> L_charac                                   (36)
	String -> L_quoted                                 (37)
	Id -> L_Id                                         (38)
	Program -> ListDef                                 (39)
	ListDef ->                                         (40)
	ListDef -> ListDef Def                             (41)
	Def -> Type Id '(' ListArg ')' '{' ListStm '}'     (42)
	ListArg ->                                         (43)
	ListArg -> Arg                                     (44)
	ListArg -> Arg ',' ListArg                         (45)
	ListStm ->                                         (46)
	ListStm -> ListStm Stm                             (47)
	Arg -> Type Id                                     (48)
	Stm -> Exp ';'                                     (49)
	Stm -> Type Id ';'                                 (50)
	Stm -> Type Id ',' ListId ';'                      (51)
	Stm -> Type Id '=' Exp ';'                         (52)
	Stm -> 'return' Exp ';'                            (53)
	Stm -> 'return' ';'                                (54)
	Stm -> 'while' '(' Exp ')' Stm                     (55)
	Stm -> 'do' Stm ';' 'while' '(' Exp ')'            (56)
	Stm -> '{' ListStm '}'                             (57)
	Stm -> 'if' '(' Exp ')' Stm                        (58)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (59)
	Stm -> 'for' '(' Exp ';' Exp ';' Exp ')' Stm       (60)
	Stm -> 'typedef' QCList Id                         (61)
	Stm -> 'struct' Id '{' ListStm '}' ';'             (62)
	Stm -> Exp Id ';'                                  (63)
	Exp16 -> Integer                                   (64)
	Exp16 -> Double                                    (65)
	Exp16 -> ListString                                (66)
	Exp16 -> Char                                      (67)
	Exp16 -> 'true'                                    (68)
	Exp16 -> 'false'                                   (69)
	Exp16 -> QCList                                    (70)
	Exp16 -> '(' Exp ')'                               (71)
	Exp15 -> Id '(' ListExp ')'                        (72)
	Exp15 -> Id '[' Exp ']'                            (73)
	Exp15 -> Exp16                                     (74)
	Exp14 -> Exp15 '++'                                (75)
	Exp14 -> Exp15 '--'                                (76)
	Exp14 -> Exp15 '.' Exp14                           (77)
	Exp14 -> Exp15 '->' Exp14                          (78)
	Exp14 -> Exp15                                     (79)
	Exp13 -> '++' Exp14                                (80)
	Exp13 -> '--' Exp14                                (81)
	Exp13 -> '!' Exp14                                 (82)
	Exp13 -> Exp14                                     (83)
	Exp12 -> Exp12 '*' Exp13                           (84)
	Exp12 -> Exp12 '/' Exp13                           (85)
	Exp12 -> Exp12 '%' Exp13                           (86)
	Exp12 -> Exp13                                     (87)
	Exp11 -> Exp11 '+' Exp12                           (88)
	Exp11 -> Exp11 '-' Exp12                           (89)
	Exp11 -> Exp12                                     (90)
	Exp10 -> Exp10 '<<' Exp11                          (91)
	Exp10 -> Exp10 '>>' Exp11                          (92)
	Exp10 -> Exp11                                     (93)
	Exp9 -> Exp10 '<' Exp10                            (94)
	Exp9 -> Exp10 '>' Exp10                            (95)
	Exp9 -> Exp10 '<=' Exp10                           (96)
	Exp9 -> Exp10 '>=' Exp10                           (97)
	Exp9 -> Exp10                                      (98)
	Exp8 -> Exp9 '==' Exp9                             (99)
	Exp8 -> Exp9 '!=' Exp9                             (100)
	Exp8 -> Exp9                                       (101)
	Exp4 -> Exp4 '&&' Exp5                             (102)
	Exp4 -> Exp5                                       (103)
	Exp3 -> Exp3 '||' Exp4                             (104)
	Exp3 -> Exp4                                       (105)
	Exp2 -> Exp3 '=' Exp2                              (106)
	Exp2 -> Exp3 '+=' Exp2                             (107)
	Exp2 -> Exp3 '-=' Exp2                             (108)
	Exp2 -> Exp3 '?' Exp2 ':' Exp2                     (109)
	Exp2 -> Exp3                                       (110)
	Exp1 -> 'throw' Exp2                               (111)
	Exp1 -> Exp2                                       (112)
	Exp -> Exp1                                        (113)
	Exp5 -> Exp6                                       (114)
	Exp6 -> Exp7                                       (115)
	Exp7 -> Exp8                                       (116)
	ListExp ->                                         (117)
	ListExp -> Exp                                     (118)
	ListExp -> Exp ',' ListExp                         (119)
	ListString -> String                               (120)
	ListString -> String ListString                    (121)
	Type -> 'bool'                                     (122)
	Type -> 'int'                                      (123)
	Type -> 'double'                                   (124)
	Type -> 'void'                                     (125)
	Type -> 'string'                                   (126)
	Type -> QCList                                     (127)
	ListType -> Type                                   (128)
	ListType -> Type ',' ListType                      (129)
	QCList -> ListQcons                                (130)
	Qcons -> Type                                      (131)
	Qcons -> Id                                        (132)
	Qcons -> Id '<' Type '>'                           (133)
	ListQcons -> Qcons                                 (134)
	ListQcons -> Qcons '::' ListQcons                  (135)
	Cid -> Id                                          (136)
	ListCid -> Cid                                     (137)
	ListCid -> Cid '::' ListCid                        (138)
	ListId -> Id                                       (139)
	ListId -> Id ',' ListId                            (140)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	'++'           { PT _ (TS _ 9) }
	'+='           { PT _ (TS _ 10) }
	','            { PT _ (TS _ 11) }
	'-'            { PT _ (TS _ 12) }
	'--'           { PT _ (TS _ 13) }
	'-='           { PT _ (TS _ 14) }
	'->'           { PT _ (TS _ 15) }
	'.'            { PT _ (TS _ 16) }
	'/'            { PT _ (TS _ 17) }
	':'            { PT _ (TS _ 18) }
	'::'           { PT _ (TS _ 19) }
	';'            { PT _ (TS _ 20) }
	'<'            { PT _ (TS _ 21) }
	'<<'           { PT _ (TS _ 22) }
	'<='           { PT _ (TS _ 23) }
	'='            { PT _ (TS _ 24) }
	'=='           { PT _ (TS _ 25) }
	'>'            { PT _ (TS _ 26) }
	'>='           { PT _ (TS _ 27) }
	'>>'           { PT _ (TS _ 28) }
	'?'            { PT _ (TS _ 29) }
	'['            { PT _ (TS _ 30) }
	']'            { PT _ (TS _ 31) }
	'bool'         { PT _ (TS _ 32) }
	'do'           { PT _ (TS _ 33) }
	'double'       { PT _ (TS _ 34) }
	'else'         { PT _ (TS _ 35) }
	'false'        { PT _ (TS _ 36) }
	'for'          { PT _ (TS _ 37) }
	'if'           { PT _ (TS _ 38) }
	'int'          { PT _ (TS _ 39) }
	'return'       { PT _ (TS _ 40) }
	'string'       { PT _ (TS _ 41) }
	'struct'       { PT _ (TS _ 42) }
	'throw'        { PT _ (TS _ 43) }
	'true'         { PT _ (TS _ 44) }
	'typedef'      { PT _ (TS _ 45) }
	'void'         { PT _ (TS _ 46) }
	'while'        { PT _ (TS _ 47) }
	'{'            { PT _ (TS _ 48) }
	'||'           { PT _ (TS _ 49) }
	'}'            { PT _ (TS _ 50) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_charac       { PT _ (TC $$) }
	L_quoted       { PT _ (TL $$) }
	L_Id           { PT _ (T_Id _) }
	L_err          { _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pListDef rule  1
	%start_pDef     rule  2
	%start_pListArg rule  3
	%start_pListStm rule  4
	%start_pArg     rule  5
	%start_pStm     rule  6
	%start_pExp16   rule  7
	%start_pExp15   rule  8
	%start_pExp14   rule  9
	%start_pExp13   rule  10
	%start_pExp12   rule  11
	%start_pExp11   rule  12
	%start_pExp10   rule  13
	%start_pExp9    rule  14
	%start_pExp8    rule  15
	%start_pExp4    rule  16
	%start_pExp3    rule  17
	%start_pExp2    rule  18
	%start_pExp1    rule  19
	%start_pExp     rule  20
	%start_pExp5    rule  21
	%start_pExp6    rule  22
	%start_pExp7    rule  23
	%start_pListExp rule  24
	%start_pListString rule  25
	%start_pType    rule  26
	%start_pListType rule  27
	%start_pQCList  rule  28
	%start_pQcons   rule  29
	%start_pListQcons rule  30
	%start_pCid     rule  31
	%start_pListCid rule  32
	%start_pListId  rule  33
	Integer         rule  34
	Double          rule  35
	Char            rule  36
	String          rule  37
	Id              rule  38
	Program         rule  39
	ListDef         rules 40, 41
	Def             rule  42
	ListArg         rules 43, 44, 45
	ListStm         rules 46, 47
	Arg             rule  48
	Stm             rules 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63
	Exp16           rules 64, 65, 66, 67, 68, 69, 70, 71
	Exp15           rules 72, 73, 74
	Exp14           rules 75, 76, 77, 78, 79
	Exp13           rules 80, 81, 82, 83
	Exp12           rules 84, 85, 86, 87
	Exp11           rules 88, 89, 90
	Exp10           rules 91, 92, 93
	Exp9            rules 94, 95, 96, 97, 98
	Exp8            rules 99, 100, 101
	Exp4            rules 102, 103
	Exp3            rules 104, 105
	Exp2            rules 106, 107, 108, 109, 110
	Exp1            rules 111, 112
	Exp             rule  113
	Exp5            rule  114
	Exp6            rule  115
	Exp7            rule  116
	ListExp         rules 117, 118, 119
	ListString      rules 120, 121
	Type            rules 122, 123, 124, 125, 126, 127
	ListType        rules 128, 129
	QCList          rule  130
	Qcons           rules 131, 132, 133
	ListQcons       rules 134, 135
	Cid             rule  136
	ListCid         rules 137, 138
	ListId          rules 139, 140

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'bool'         reduce using rule 40
	'double'       reduce using rule 40
	'int'          reduce using rule 40
	'string'       reduce using rule 40
	'void'         reduce using rule 40
	L_Id           reduce using rule 40
	%eof           reduce using rule 40

	Program        goto state 131
	ListDef        goto state 132

State 1


	'bool'         reduce using rule 40
	'double'       reduce using rule 40
	'int'          reduce using rule 40
	'string'       reduce using rule 40
	'void'         reduce using rule 40
	L_Id           reduce using rule 40
	%eof           reduce using rule 40

	ListDef        goto state 130

State 2


	'bool'         shift, and enter state 48
	'double'       shift, and enter state 49
	'int'          shift, and enter state 50
	'string'       shift, and enter state 51
	'void'         shift, and enter state 52
	L_Id           shift, and enter state 38

	Id             goto state 43
	Def            goto state 128
	Type           goto state 129
	QCList         goto state 45
	Qcons          goto state 46
	ListQcons      goto state 54

State 3


	'bool'         shift, and enter state 48
	'double'       shift, and enter state 49
	'int'          shift, and enter state 50
	'string'       shift, and enter state 51
	'void'         shift, and enter state 52
	L_Id           shift, and enter state 38
	%eof           reduce using rule 43

	Id             goto state 43
	ListArg        goto state 126
	Arg            goto state 127
	Type           goto state 124
	QCList         goto state 45
	Qcons          goto state 46
	ListQcons      goto state 54

State 4


	'!'            reduce using rule 46
	'('            reduce using rule 46
	'++'           reduce using rule 46
	'--'           reduce using rule 46
	'bool'         reduce using rule 46
	'do'           reduce using rule 46
	'double'       reduce using rule 46
	'false'        reduce using rule 46
	'for'          reduce using rule 46
	'if'           reduce using rule 46
	'int'          reduce using rule 46
	'return'       reduce using rule 46
	'string'       reduce using rule 46
	'struct'       reduce using rule 46
	'throw'        reduce using rule 46
	'true'         reduce using rule 46
	'typedef'      reduce using rule 46
	'void'         reduce using rule 46
	'while'        reduce using rule 46
	'{'            reduce using rule 46
	L_integ        reduce using rule 46
	L_doubl        reduce using rule 46
	L_charac       reduce using rule 46
	L_quoted       reduce using rule 46
	L_Id           reduce using rule 46
	%eof           reduce using rule 46

	ListStm        goto state 125

State 5


	'bool'         shift, and enter state 48
	'double'       shift, and enter state 49
	'int'          shift, and enter state 50
	'string'       shift, and enter state 51
	'void'         shift, and enter state 52
	L_Id           shift, and enter state 38

	Id             goto state 43
	Arg            goto state 123
	Type           goto state 124
	QCList         goto state 45
	Qcons          goto state 46
	ListQcons      goto state 54

State 6


	'!'            shift, and enter state 86
	'('            shift, and enter state 87
	'++'           shift, and enter state 88
	'--'           shift, and enter state 89
	'bool'         shift, and enter state 48
	'do'           shift, and enter state 115
	'double'       shift, and enter state 49
	'false'        shift, and enter state 90
	'for'          shift, and enter state 116
	'if'           shift, and enter state 117
	'int'          shift, and enter state 50
	'return'       shift, and enter state 118
	'string'       shift, and enter state 51
	'struct'       shift, and enter state 119
	'throw'        shift, and enter state 91
	'true'         shift, and enter state 92
	'typedef'      shift, and enter state 120
	'void'         shift, and enter state 52
	'while'        shift, and enter state 121
	'{'            shift, and enter state 122
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 93
	L_charac       shift, and enter state 94
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 38

	Integer        goto state 62
	Double         goto state 63
	Char           goto state 64
	String         goto state 59
	Id             goto state 65
	Stm            goto state 112
	Exp16          goto state 66
	Exp15          goto state 67
	Exp14          goto state 68
	Exp13          goto state 69
	Exp12          goto state 70
	Exp11          goto state 71
	Exp10          goto state 72
	Exp9           goto state 73
	Exp8           goto state 74
	Exp4           goto state 75
	Exp3           goto state 76
	Exp2           goto state 77
	Exp1           goto state 78
	Exp            goto state 113
	Exp5           goto state 80
	Exp6           goto state 81
	Exp7           goto state 82
	ListString     goto state 84
	Type           goto state 114
	QCList         goto state 85
	Qcons          goto state 46
	ListQcons      goto state 54

State 7


	'('            shift, and enter state 87
	'bool'         shift, and enter state 48
	'double'       shift, and enter state 49
	'false'        shift, and enter state 90
	'int'          shift, and enter state 50
	'string'       shift, and enter state 51
	'true'         shift, and enter state 92
	'void'         shift, and enter state 52
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 93
	L_charac       shift, and enter state 94
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 38

	Integer        goto state 62
	Double         goto state 63
	Char           goto state 64
	String         goto state 59
	Id             goto state 43
	Exp16          goto state 111
	ListString     goto state 84
	Type           goto state 44
	QCList         goto state 85
	Qcons          goto state 46
	ListQcons      goto state 54

State 8


	'('            shift, and enter state 87
	'bool'         shift, and enter state 48
	'double'       shift, and enter state 49
	'false'        shift, and enter state 90
	'int'          shift, and enter state 50
	'string'       shift, and enter state 51
	'true'         shift, and enter state 92
	'void'         shift, and enter state 52
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 93
	L_charac       shift, and enter state 94
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 38

	Integer        goto state 62
	Double         goto state 63
	Char           goto state 64
	String         goto state 59
	Id             goto state 65
	Exp16          goto state 66
	Exp15          goto state 110
	ListString     goto state 84
	Type           goto state 44
	QCList         goto state 85
	Qcons          goto state 46
	ListQcons      goto state 54

State 9


	'('            shift, and enter state 87
	'bool'         shift, and enter state 48
	'double'       shift, and enter state 49
	'false'        shift, and enter state 90
	'int'          shift, and enter state 50
	'string'       shift, and enter state 51
	'true'         shift, and enter state 92
	'void'         shift, and enter state 52
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 93
	L_charac       shift, and enter state 94
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 38

	Integer        goto state 62
	Double         goto state 63
	Char           goto state 64
	String         goto state 59
	Id             goto state 65
	Exp16          goto state 66
	Exp15          goto state 67
	Exp14          goto state 109
	ListString     goto state 84
	Type           goto state 44
	QCList         goto state 85
	Qcons          goto state 46
	ListQcons      goto state 54

State 10


	'!'            shift, and enter state 86
	'('            shift, and enter state 87
	'++'           shift, and enter state 88
	'--'           shift, and enter state 89
	'bool'         shift, and enter state 48
	'double'       shift, and enter state 49
	'false'        shift, and enter state 90
	'int'          shift, and enter state 50
	'string'       shift, and enter state 51
	'true'         shift, and enter state 92
	'void'         shift, and enter state 52
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 93
	L_charac       shift, and enter state 94
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 38

	Integer        goto state 62
	Double         goto state 63
	Char           goto state 64
	String         goto state 59
	Id             goto state 65
	Exp16          goto state 66
	Exp15          goto state 67
	Exp14          goto state 68
	Exp13          goto state 108
	ListString     goto state 84
	Type           goto state 44
	QCList         goto state 85
	Qcons          goto state 46
	ListQcons      goto state 54

State 11


	'!'            shift, and enter state 86
	'('            shift, and enter state 87
	'++'           shift, and enter state 88
	'--'           shift, and enter state 89
	'bool'         shift, and enter state 48
	'double'       shift, and enter state 49
	'false'        shift, and enter state 90
	'int'          shift, and enter state 50
	'string'       shift, and enter state 51
	'true'         shift, and enter state 92
	'void'         shift, and enter state 52
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 93
	L_charac       shift, and enter state 94
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 38

	Integer        goto state 62
	Double         goto state 63
	Char           goto state 64
	String         goto state 59
	Id             goto state 65
	Exp16          goto state 66
	Exp15          goto state 67
	Exp14          goto state 68
	Exp13          goto state 69
	Exp12          goto state 107
	ListString     goto state 84
	Type           goto state 44
	QCList         goto state 85
	Qcons          goto state 46
	ListQcons      goto state 54

State 12


	'!'            shift, and enter state 86
	'('            shift, and enter state 87
	'++'           shift, and enter state 88
	'--'           shift, and enter state 89
	'bool'         shift, and enter state 48
	'double'       shift, and enter state 49
	'false'        shift, and enter state 90
	'int'          shift, and enter state 50
	'string'       shift, and enter state 51
	'true'         shift, and enter state 92
	'void'         shift, and enter state 52
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 93
	L_charac       shift, and enter state 94
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 38

	Integer        goto state 62
	Double         goto state 63
	Char           goto state 64
	String         goto state 59
	Id             goto state 65
	Exp16          goto state 66
	Exp15          goto state 67
	Exp14          goto state 68
	Exp13          goto state 69
	Exp12          goto state 70
	Exp11          goto state 106
	ListString     goto state 84
	Type           goto state 44
	QCList         goto state 85
	Qcons          goto state 46
	ListQcons      goto state 54

State 13


	'!'            shift, and enter state 86
	'('            shift, and enter state 87
	'++'           shift, and enter state 88
	'--'           shift, and enter state 89
	'bool'         shift, and enter state 48
	'double'       shift, and enter state 49
	'false'        shift, and enter state 90
	'int'          shift, and enter state 50
	'string'       shift, and enter state 51
	'true'         shift, and enter state 92
	'void'         shift, and enter state 52
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 93
	L_charac       shift, and enter state 94
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 38

	Integer        goto state 62
	Double         goto state 63
	Char           goto state 64
	String         goto state 59
	Id             goto state 65
	Exp16          goto state 66
	Exp15          goto state 67
	Exp14          goto state 68
	Exp13          goto state 69
	Exp12          goto state 70
	Exp11          goto state 71
	Exp10          goto state 105
	ListString     goto state 84
	Type           goto state 44
	QCList         goto state 85
	Qcons          goto state 46
	ListQcons      goto state 54

State 14


	'!'            shift, and enter state 86
	'('            shift, and enter state 87
	'++'           shift, and enter state 88
	'--'           shift, and enter state 89
	'bool'         shift, and enter state 48
	'double'       shift, and enter state 49
	'false'        shift, and enter state 90
	'int'          shift, and enter state 50
	'string'       shift, and enter state 51
	'true'         shift, and enter state 92
	'void'         shift, and enter state 52
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 93
	L_charac       shift, and enter state 94
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 38

	Integer        goto state 62
	Double         goto state 63
	Char           goto state 64
	String         goto state 59
	Id             goto state 65
	Exp16          goto state 66
	Exp15          goto state 67
	Exp14          goto state 68
	Exp13          goto state 69
	Exp12          goto state 70
	Exp11          goto state 71
	Exp10          goto state 72
	Exp9           goto state 104
	ListString     goto state 84
	Type           goto state 44
	QCList         goto state 85
	Qcons          goto state 46
	ListQcons      goto state 54

State 15


	'!'            shift, and enter state 86
	'('            shift, and enter state 87
	'++'           shift, and enter state 88
	'--'           shift, and enter state 89
	'bool'         shift, and enter state 48
	'double'       shift, and enter state 49
	'false'        shift, and enter state 90
	'int'          shift, and enter state 50
	'string'       shift, and enter state 51
	'true'         shift, and enter state 92
	'void'         shift, and enter state 52
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 93
	L_charac       shift, and enter state 94
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 38

	Integer        goto state 62
	Double         goto state 63
	Char           goto state 64
	String         goto state 59
	Id             goto state 65
	Exp16          goto state 66
	Exp15          goto state 67
	Exp14          goto state 68
	Exp13          goto state 69
	Exp12          goto state 70
	Exp11          goto state 71
	Exp10          goto state 72
	Exp9           goto state 73
	Exp8           goto state 103
	ListString     goto state 84
	Type           goto state 44
	QCList         goto state 85
	Qcons          goto state 46
	ListQcons      goto state 54

State 16


	'!'            shift, and enter state 86
	'('            shift, and enter state 87
	'++'           shift, and enter state 88
	'--'           shift, and enter state 89
	'bool'         shift, and enter state 48
	'double'       shift, and enter state 49
	'false'        shift, and enter state 90
	'int'          shift, and enter state 50
	'string'       shift, and enter state 51
	'true'         shift, and enter state 92
	'void'         shift, and enter state 52
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 93
	L_charac       shift, and enter state 94
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 38

	Integer        goto state 62
	Double         goto state 63
	Char           goto state 64
	String         goto state 59
	Id             goto state 65
	Exp16          goto state 66
	Exp15          goto state 67
	Exp14          goto state 68
	Exp13          goto state 69
	Exp12          goto state 70
	Exp11          goto state 71
	Exp10          goto state 72
	Exp9           goto state 73
	Exp8           goto state 74
	Exp4           goto state 102
	Exp5           goto state 80
	Exp6           goto state 81
	Exp7           goto state 82
	ListString     goto state 84
	Type           goto state 44
	QCList         goto state 85
	Qcons          goto state 46
	ListQcons      goto state 54

State 17


	'!'            shift, and enter state 86
	'('            shift, and enter state 87
	'++'           shift, and enter state 88
	'--'           shift, and enter state 89
	'bool'         shift, and enter state 48
	'double'       shift, and enter state 49
	'false'        shift, and enter state 90
	'int'          shift, and enter state 50
	'string'       shift, and enter state 51
	'true'         shift, and enter state 92
	'void'         shift, and enter state 52
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 93
	L_charac       shift, and enter state 94
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 38

	Integer        goto state 62
	Double         goto state 63
	Char           goto state 64
	String         goto state 59
	Id             goto state 65
	Exp16          goto state 66
	Exp15          goto state 67
	Exp14          goto state 68
	Exp13          goto state 69
	Exp12          goto state 70
	Exp11          goto state 71
	Exp10          goto state 72
	Exp9           goto state 73
	Exp8           goto state 74
	Exp4           goto state 75
	Exp3           goto state 101
	Exp5           goto state 80
	Exp6           goto state 81
	Exp7           goto state 82
	ListString     goto state 84
	Type           goto state 44
	QCList         goto state 85
	Qcons          goto state 46
	ListQcons      goto state 54

State 18


	'!'            shift, and enter state 86
	'('            shift, and enter state 87
	'++'           shift, and enter state 88
	'--'           shift, and enter state 89
	'bool'         shift, and enter state 48
	'double'       shift, and enter state 49
	'false'        shift, and enter state 90
	'int'          shift, and enter state 50
	'string'       shift, and enter state 51
	'true'         shift, and enter state 92
	'void'         shift, and enter state 52
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 93
	L_charac       shift, and enter state 94
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 38

	Integer        goto state 62
	Double         goto state 63
	Char           goto state 64
	String         goto state 59
	Id             goto state 65
	Exp16          goto state 66
	Exp15          goto state 67
	Exp14          goto state 68
	Exp13          goto state 69
	Exp12          goto state 70
	Exp11          goto state 71
	Exp10          goto state 72
	Exp9           goto state 73
	Exp8           goto state 74
	Exp4           goto state 75
	Exp3           goto state 76
	Exp2           goto state 100
	Exp5           goto state 80
	Exp6           goto state 81
	Exp7           goto state 82
	ListString     goto state 84
	Type           goto state 44
	QCList         goto state 85
	Qcons          goto state 46
	ListQcons      goto state 54

State 19


	'!'            shift, and enter state 86
	'('            shift, and enter state 87
	'++'           shift, and enter state 88
	'--'           shift, and enter state 89
	'bool'         shift, and enter state 48
	'double'       shift, and enter state 49
	'false'        shift, and enter state 90
	'int'          shift, and enter state 50
	'string'       shift, and enter state 51
	'throw'        shift, and enter state 91
	'true'         shift, and enter state 92
	'void'         shift, and enter state 52
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 93
	L_charac       shift, and enter state 94
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 38

	Integer        goto state 62
	Double         goto state 63
	Char           goto state 64
	String         goto state 59
	Id             goto state 65
	Exp16          goto state 66
	Exp15          goto state 67
	Exp14          goto state 68
	Exp13          goto state 69
	Exp12          goto state 70
	Exp11          goto state 71
	Exp10          goto state 72
	Exp9           goto state 73
	Exp8           goto state 74
	Exp4           goto state 75
	Exp3           goto state 76
	Exp2           goto state 77
	Exp1           goto state 99
	Exp5           goto state 80
	Exp6           goto state 81
	Exp7           goto state 82
	ListString     goto state 84
	Type           goto state 44
	QCList         goto state 85
	Qcons          goto state 46
	ListQcons      goto state 54

State 20


	'!'            shift, and enter state 86
	'('            shift, and enter state 87
	'++'           shift, and enter state 88
	'--'           shift, and enter state 89
	'bool'         shift, and enter state 48
	'double'       shift, and enter state 49
	'false'        shift, and enter state 90
	'int'          shift, and enter state 50
	'string'       shift, and enter state 51
	'throw'        shift, and enter state 91
	'true'         shift, and enter state 92
	'void'         shift, and enter state 52
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 93
	L_charac       shift, and enter state 94
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 38

	Integer        goto state 62
	Double         goto state 63
	Char           goto state 64
	String         goto state 59
	Id             goto state 65
	Exp16          goto state 66
	Exp15          goto state 67
	Exp14          goto state 68
	Exp13          goto state 69
	Exp12          goto state 70
	Exp11          goto state 71
	Exp10          goto state 72
	Exp9           goto state 73
	Exp8           goto state 74
	Exp4           goto state 75
	Exp3           goto state 76
	Exp2           goto state 77
	Exp1           goto state 78
	Exp            goto state 98
	Exp5           goto state 80
	Exp6           goto state 81
	Exp7           goto state 82
	ListString     goto state 84
	Type           goto state 44
	QCList         goto state 85
	Qcons          goto state 46
	ListQcons      goto state 54

State 21


	'!'            shift, and enter state 86
	'('            shift, and enter state 87
	'++'           shift, and enter state 88
	'--'           shift, and enter state 89
	'bool'         shift, and enter state 48
	'double'       shift, and enter state 49
	'false'        shift, and enter state 90
	'int'          shift, and enter state 50
	'string'       shift, and enter state 51
	'true'         shift, and enter state 92
	'void'         shift, and enter state 52
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 93
	L_charac       shift, and enter state 94
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 38

	Integer        goto state 62
	Double         goto state 63
	Char           goto state 64
	String         goto state 59
	Id             goto state 65
	Exp16          goto state 66
	Exp15          goto state 67
	Exp14          goto state 68
	Exp13          goto state 69
	Exp12          goto state 70
	Exp11          goto state 71
	Exp10          goto state 72
	Exp9           goto state 73
	Exp8           goto state 74
	Exp5           goto state 97
	Exp6           goto state 81
	Exp7           goto state 82
	ListString     goto state 84
	Type           goto state 44
	QCList         goto state 85
	Qcons          goto state 46
	ListQcons      goto state 54

State 22


	'!'            shift, and enter state 86
	'('            shift, and enter state 87
	'++'           shift, and enter state 88
	'--'           shift, and enter state 89
	'bool'         shift, and enter state 48
	'double'       shift, and enter state 49
	'false'        shift, and enter state 90
	'int'          shift, and enter state 50
	'string'       shift, and enter state 51
	'true'         shift, and enter state 92
	'void'         shift, and enter state 52
	L_integ        shift, and enter state 35
	L_doubl        shift, and enter state 93
	L_charac       shift, and enter state 94
	L_quoted       shift, and enter state 61
	L_Id           shift, and enter state 38
